# sleepwalk

./: .gitignore  README.md  pyproject.toml
sleepwalk/: cli.py  config.py  detector.py  interactive.py  paths.py  state.py  systemd.py  tmux.py
tests/: test_detector.py  test_tick.py
